2013-04-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c: Fixed documentation typo for
	Connection.getPPDs2.

2013-03-20  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.63.

2013-03-20  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (set_ipp_error): IPPError tuple now
	contains a string describing the specific error encountered,
	if available.

2012-08-01  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.62.

2012-03-28  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: Define all constants regardless of which
	version of CUPS is built against.

2012-03-22  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_dealloc): Add missing NULL check for
	debugging message (Ubuntu #951001).  Patch from Till Kamppeter.

2012-03-06  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.61.

2011-12-08  Tim Waugh  <twaugh@redhat.com>

	* cupsipp.c (IPPRequest_getAttributes): Hardened for Py*
	failures.

	* cupsppd.c (PPD_emitString): Fixed some more reference count
	issues (trac #17).

	* cupsipp.c: Fixed reference count issue with called object
	result (trac #17).
	(cupsipp_iocb_read): Prevent NULL dereference when
	Py_BuildValue fails (trac #17).

2011-12-06  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c, cupsmodule.c, cupsppd.c: Use
	Py_RETURN_NONE where appropriate.

	* cupsmodule.c, cupsppd.c: Fixed reference count issues with
	Py_None (trac #17).

2011-11-28  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: Fixed typo in fix for trac #16.

2011-11-25  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: HTTP_AUTHORIZATION_CANCELED constant requires
	CUPS 1.4 (trac #16).

	* cupsppd.c: Object lifecycle debugging.

2011-10-11  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.60.

2011-10-06  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: New constants defined.

2011-10-03  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.59.

2011-10-03  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (do_password_callback), cupsconnection.c